tests/lex/invalid/binary_literal_trailing_underscore.zn
def f() {
    // error: underscore is trailing instead of between digits
    var x = 0b0101_;
}
